style: Fix the language selector and tha navBar dark mode

--- a/src/app/[locale]/globals.css
+++ b/src/app/[locale]/globals.css
@@ -22,6 +22,10 @@
   background-color: var(--background);
 }
 
+.bg-color-reverse {
+  background-color: var(--foreground);
+}
+
 .title-color {
   color: var(--foreground);
 }
@@ -29,6 +33,11 @@
 .text-color {
   color: var(--foreground);
 }
+
+.text-color-reverse {
+  color: var(--background);
+}
+
 
 .subtitle-color {
   color: var(--subtitle);
@@ -39,15 +48,11 @@
 }
 
 .font-title {
-  font-family: var(--title-font);
+  font-family: var(--title-font) !important;
 }
 
 .font-text {
   font-family: var(--text-font);
-}
-
-.shadow-header{
-  box-shadow: 3px 4px 4px 2px rgba(48, 51, 46, 0.20);
 }
 
 nextjs-portal {
